# crcl

./: .gitignore  .travis.yml  nbactions.xml  pom.xml  settings.xml
.github/workflows/: workflow.yml
com/github/wshackle/crcl4java/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
com/github/wshackle/crcl4java-base/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
com/github/wshackle/crcl4java-commons-math/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
com/github/wshackle/crcl4java-exi/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
com/github/wshackle/crcl4java-motoman/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
com/github/wshackle/crcl4java-ui/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
com/github/wshackle/crcl4java-utils/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
instances/: commandMoveTo.xml  testForceSensorProgram.xml  testForceSensorProgram2.xml  testForceSensorProgram3.xml  testForceSensorProgram4.xml  testForceSensorProgram5.xml  testForceSensorProgram6.xml  testForceSensorProgram7.xml
jcrcl-base/: pom.xml
jcrcl-base/src/main/resources/: CRCLProgramInstance.xsd
jcrcl-base/src/test/resources/: programExample.xml
jcrcl-commons-math/: pom.xml
jcrcl-commons-math/src/test/java/: CRCLPosemathCommonsTest.java
jcrcl-utils/: pom.xml
rcslib/: pom.xml
schemas/: CRCLCommands.xsd  CRCLProgramInstance.xsd  CRCLStatus.xsd
tools/cpp/crcl_cpp/: CMakeLists.txt
tools/cpp/crcl_cpp/src/: CRCLCommandInstance.lex  CRCLCommandInstanceLex.cc  CRCLCommandInstanceParser.cc  CRCLCommandInstanceYACC.cc  CRCLProgramInstance.lex  CRCLProgramInstanceLex.cc  CRCLProgramInstanceParser.cc  CRCLProgramInstanceYACC.cc  CRCLStatus.lex  CRCLStatus.y  CRCLStatusClasses.cc  CRCLStatusLex.cc  CRCLStatusParser.cc  CRCLStatusYACC.cc  crcl_program_client.cpp  crcl_server.cpp  crcl_server_main.cpp  makeCommandEndCanon.cc  makeStatusExample.cc  matrix_test.cpp
tools/cpp/xml_parser_generator/: CMakeLists.txt
tools/cpp/xml_parser_generator/src/: patternLex.cc  patternYACC.cc  patternYACC.hh  xmlInstanceParserGenerator.cc  xmlSchemaInstance.cc  xmlSchemaLex.cc  xmlSchemaYACC.cc  xmlSchemaYACC.hh
tools/crpi-crcl/: .gitignore  ChangeLog  Doxyfile  Issues  Makefile.am  Notes  README  README.md  acinclude.m4  configure  configure.ac  copyit.sh  crpi_crcl.m4  include-fix.py  setup.bash
tools/crpi-crcl/Applications/Application_CRPI_Test/: CRPI_Shell.cpp  Fanuc_Test.cpp  Motoman_Test.cpp  Move_Test.cpp  Small.cpp  Source.cpp
tools/crpi-crcl/Applications/CRCL_Test/: CRCL_Client_Shell.cpp  CRCL_Command_Reader.cpp  CRCL_Robot_Simulator.cpp  CRCL_Status_Reader.cpp
tools/crpi-crcl/Applications/XMLInterface/: URDF_CRPI_Test.cpp
tools/crpi-crcl/Libraries/CRPI/: CRCLCommandInstance.hxx  CRCLCommands.hxx  CRCLCommon.cpp  CRCLCommon.h  CRCLProgramInstance.hxx  CRCLStatus.hxx  DataPrimitives.hxx  URDF_CRPI.cxx  URDF_CRPI.hxx  buildCRCL.sh  crpi_abb.cpp  crpi_crcl_robot.cpp  crpi_crcl_robot.h  crpi_kuka_lwr.h  crpi_universal.h  crpi_xml.h
tools/crpi-crcl/Libraries/Clustering/Cluster/: Cluster.h
tools/crpi-crcl/Libraries/Clustering/Patterns/: Pattern.h
tools/crpi-crcl/Libraries/Clustering/kMeans/: kMeansCluster.h
tools/crpi-crcl/Libraries/Math/: NumericalMath.h  VectorMath.h
tools/crpi-crcl/Libraries/Sensor/HRI/: LeapMotion.h  MYO.h  ManusVR.h
tools/crpi-crcl/Libraries/Sensor/MoCap/: MoCapTypes.h  OptiTrack.h  Vicon.h
tools/crpi-crcl/Libraries/Serial/: serial.h
tools/crpi-crcl/etc/: fanuc-lrmate200id.xml  motoman-sia20d.xml  robot.xml  urdf.xml  urdf_crpi.xml
tools/crpi-crcl/instances/: commandActuateJoints.xml  commandConfigureJointReports.xml  commandConfigureStatusReport.xml  commandDwell.xml  commandEndCanon.xml  commandEndCanonWithNames.xml  commandGetStatus.xml  commandInitCanon.xml  commandInitCanonWithNames.xml  commandMoveThroughTo.xml  commandMoveThroughToWithNames.xml  commandMoveTo.xml  commandSetEndEffector.xml  commandSetRobotParameters.xml  commandSetTransAccel.xml  commandSetTransSpeed1.xml  commandSetTransSpeed1WithNames.xml  commandSetTransSpeed2.xml  commandSetTransSpeed2WithNames.xml  commandStopMotion.xml  crcl4java.xml  programAll.xml  programAllWithNames.xml  programExample.xml  programExampleWithNames.xml  statusExample.xml  statusExampleGen.xml  statusExampleStr.xml  statusExampleWithNames.xml
tools/crpi-crcl/lib/: Makefile.am
tools/crpi-crcl/schemas/: URDF_CRPI.xsd
tools/crpi-crcl/win32/: CRPI_CRCL.sln  README.txt
tools/crpi-crcl/win32/CRCL_Client_Shell/: CRCL_Client_Shell.vcxproj
tools/crpi-crcl/win32/CRCL_Robot_Simulator/: CRCL_Robot_Simulator.vcxproj
tools/crpi-crcl/win32/CRPI_Shell/: CRPI_Shell.vcxproj
tools/crpi-crcl/win32/Fanuc_Test/: Fanuc_Test.vcxproj
tools/crpi-crcl/win32/Motoman_Test/: Motoman_Test.vcxproj
tools/crpi-crcl/win32/Move_Test/: Move_Test.vcxproj
tools/crpi-crcl/win32/libCRCL/: libCRCL.vcxproj
tools/crpi-crcl/win32/libCRPI/: libCRPI.vcxproj
tools/crpi-crcl/win32/libMath/: libMath.vcxproj
tools/crpi-crcl/win32/libSerial/: libSerial.vcxproj
tools/crpi-crcl/win32/libulapi/: libulapi.vcxproj
tools/csharp/: .gitignore
tools/csharp/CRCL_CSharp/: CRCL_CSharp.sln  CRCL_CSharp.userprefs  README.TXT  build.sh~  clean.sh  clean.sh~  updateSchemas.bash~  updateSchemas.sh
tools/csharp/CRCL_CSharp/CRCL_CSharp_Common/: CRCLCommandInstance.cs  CRCLCommandInstance_CRCLCommands.cs  CRCLCommandInstance_CRCLCommands_CRCLProgramInstance_CRCLStatus_DataPrimitives.cs  (+7 more)
tools/java/crcl4java/: .gitignore  README.md  nb-configuration.xml  nbactions.xml  newfile  old-codecoverage_pom_xml.txt  pom.xml  release.properties  run.bat  run.sh  runWebApp.bat  runWebApp.sh  simstacks.csv  stopWebApp.bat
(+1308 files in other folders)
